# chatgpt-plus-plus

./: .gitignore  AGENTS.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  README.md  README_EN.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: pr-build.yml  release-assets.yml
apps/chatgpt-plus-launcher/: Cargo.toml  build.rs
apps/chatgpt-plus-launcher/src/: main.rs
apps/chatgpt-plus-manager/: components.json  index.html  package-lock.json  package.json  pnpm-lock.yaml
apps/chatgpt-plus-manager/src/: App.tsx  i18n-en.ts  i18n.ts  main.tsx  presets.ts  relay-profile-editor.test.ts  relay-profile-editor.ts  styles.css
apps/chatgpt-plus-manager/src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json
apps/chatgpt-plus-manager/src-tauri/capabilities/: default.json
apps/chatgpt-plus-manager/src-tauri/src/: commands.rs  install.rs  launch_runtime.rs  lib.rs  main.rs  overview.rs
apps/chatgpt-plus-manager/src-tauri/src/commands/: context.rs  diagnostics.rs  install.rs  relay.rs  sessions.rs  settings.rs  shared.rs  tests.rs
apps/chatgpt-plus-manager/src-tauri/tests/: windows_subsystem.rs
apps/chatgpt-plus-manager/src/app/: App.tsx  actions.test.ts  actions.ts  clipboard.ts  contracts.test.ts  contracts.ts  diagnostics-copy.ts  presentation.test.ts  presentation.ts  routes.test.ts  routes.ts  settings-autosave.test.ts  settings-autosave.ts  settings-normalization.test.ts  settings-normalization.ts
apps/chatgpt-plus-manager/src/components/: ProviderPresetSelector.tsx
apps/chatgpt-plus-manager/src/i18n/: dynamic-keys.ts  english.ts  index.ts  ownership.test.ts
assets/inject/: renderer-inject.js  runtime-compat.js  stepwise-inject.js
assets/inject/fixtures/: runtime-dom-legacy.json  runtime-dom-modern.json
crates/chatgpt-plus-core/: Cargo.toml
crates/chatgpt-plus-core/assets/: model-catalog-template.json
crates/chatgpt-plus-core/examples/: generate_model_catalog.rs
crates/chatgpt-plus-core/src/: ads.rs  assets.rs  atomic_file.rs  branding.rs  ccs_import.rs  cdp.rs  codex_home.rs  codex_home_apply.rs  codex_processes.rs  computer_use_guard.rs  diagnostic_log.rs  enhanced_launch.rs  env_conflicts.rs  http_client.rs  launcher.rs  lib.rs  model_catalog.rs  model_catalog_materializer.rs  model_suffix.rs  native_image_generation.rs  native_menu.rs  paths.rs  plugin_marketplace.rs  ports.rs  protocol_proxy.rs  provider_doctor.rs  provider_import.rs  proxy.rs  relay_config.rs  relay_switch.rs  routes.rs  script_market.rs  settings.rs  status.rs  stepwise.rs  update.rs  user_scripts.rs  watcher.rs  windows_integration.rs  zed_remote.rs
crates/chatgpt-plus-core/src/install/: macos.rs  mod.rs  windows.rs
crates/chatgpt-plus-core/src/protocol_proxy/: request.rs  response.rs  routes.rs  stream.rs  tests.rs  (+2 more)
crates/chatgpt-plus-core/tests/: ads.rs  bridge_routes.rs  cdp_bridge.rs  codex_home_apply.rs  codex_processes.rs  codex_sqlite.rs  force_chinese_locale_settings.rs  installers.rs  launcher.rs  model_catalog.rs  model_catalog_materializer.rs  model_suffix.rs  native_image_generation.rs  paste_fix_settings.rs  protocol_proxy.rs  provider_doctor.rs  relay_rotation.rs  relay_switch.rs  runtime_compat.rs  settings_contract.rs  updater.rs  upstream_worktree.rs  watcher.rs  zed_remote.rs
crates/chatgpt-plus-data/: Cargo.toml
crates/chatgpt-plus-data/src/: lib.rs  local_sessions.rs  markdown.rs  provider_sync.rs  storage.rs
crates/chatgpt-plus-data/tests/: local_session_scenario.rs  markdown.rs  provider_sync.rs  storage_adapter.rs
docs/agents/: domain.md  triage-labels.md
docs/architecture/: deep-modules.md
docs/plans/: 2026-07-11-deepen-project-structure.md  2026-07-12-single-app-entry.md
scripts/installer/macos/: package-dmg.sh
scripts/installer/windows/: ChatGPTPlusPlus.nsi
scripts/release/: bump-version.mjs  set-version.mjs
tools/: i18n-codemod.mjs  i18n-keys.json  i18n-verify-core.mjs  i18n-verify.mjs  i18n-verify.test.mjs  repository-hygiene.test.mjs
tools/codex-wechat/: README.md  codex_wechat.py
(+87 files in other folders)
