[workspace]
resolver = "2"
members = [
  "crates/chatgpt-plus-core",
  "crates/chatgpt-plus-data",
  "apps/chatgpt-plus-manager/src-tauri",
]

[workspace.package]
version = "1.2.34"
edition = "2024"
license = "AGPL-3.0-only"
repository = "https://github.com/Gzmomo001/chatgpt-plus-plus"

[workspace.dependencies]
anyhow = "1"
base64 = "0.22"
directories = "6"
fs2 = "0.4"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls", "system-proxy"], default-features = false }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
tokio = { version = "1", features = ["macros", "process", "rt-multi-thread", "time"] }
toml = "0.8"
toml_edit = "0.22"
uuid = { version = "1", features = ["v4"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
