[package]
name = "chatgpt-plus-manager"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
# Tauri's custom protocol is required for packaged builds, but it must remain
# disabled during `tauri dev` so the window uses the Vite dev server and HMR.
custom-protocol = ["tauri/custom-protocol"]

[lib]
name = "chatgpt_plus_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "chatgpt-plus-plus-manager"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
async-trait = "0.1"
chatgpt-plus-core = { path = "../../../crates/chatgpt-plus-core" }
chatgpt-plus-data = { path = "../../../crates/chatgpt-plus-data" }
directories.workspace = true
serde.workspace = true
serde_json.workspace = true
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tokio.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
rusqlite.workspace = true
tempfile.workspace = true
